--- a/.github/workflows/push_image.yml
+++ b/.github/workflows/push_image.yml
@@ -2,7 +2,7 @@ name: Publish Docker Image
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   clang-format:
     runs-on: ubuntu-22.04
